# gestion-dashboard

./: README.md  pyproject.toml
.claude/: settings.json
.streamlit/: config.toml
src/gestion_dashboard/: __init__.py  app.py
src/gestion_dashboard/controllers/: __init__.py  auth.py  calculs.py  database.py  epargne.py  export.py  pdf_export.py
src/gestion_dashboard/models/: __init__.py  budget.py  enums.py
src/gestion_dashboard/styles/: __init__.py  theme.py
src/gestion_dashboard/views/: __init__.py
src/gestion_dashboard/views/components/: charts.py  kpi_card.py
src/gestion_dashboard/views/pages/: analyses.py  dashboard.py  epargne_page.py  immobilier.py  journal.py  login.py  mensuel.py  parametres.py  previsionnel.py  rapport_pdf.py
