[project]
name = "gestion-dashboard"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "antoinepagneux126", email = "antoine.pagneux@gadz.org" }
]
requires-python = ">=3.12.7"
dependencies = [
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.0.0",
    "pyarrow>=15.0.0",
    "streamlit>=1.40.0",
]

[project.scripts]
gestion-dashboard = "gestion_dashboard:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
